# tinyredis

./: Cargo.toml  README.md
src/: cache.rs  main.rs  resp.rs  server.rs  simpleElection.rs
tests/: redis_test.rs
