[package]
license = "MIT"
version = "0.0.1"
name = "tinyredis"
authors = ["Namra Patel"]
description = "A minimal implementation of Redis in Rust."

[dependencies]
anyhow = "1.0.59"
tokio = { version = "1.23.0", features = ["full"] }

[dev-dependencies]
ctor = "0.1.26"
redis = "0.22.1"
assert_cmd = "2.0.7"