[package]
license = "MIT"
version = "0.0.1"
name = "tinyredis"
authors = ["Namra Patel", "Jake Bunting"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"
tokio = { version = "1.23.0", features = ["full"] }
regex = "1"
rand = "0.8.4"




[dev-dependencies]
ctor = "0.1.26"
redis = "0.22.1"
assert_cmd = "2.0.7"